# docker-starter-kit

./: .gitignore  LICENSE  README.md  gitignore_python.txt  gitignore_template  gitignore_template.txt  vscode_launch.json  zshrc-backup
airflow/: info.md
ansible/: README.md  add_user.sh  add_user_admin.sh  add_user_simple.sh  inventory.ini  launch.sh  new-user-admin.yml  new-user-standard.yml  ping.yml  provision-vps.yml  remove_user.sh  test_connection.sh
data-toolbox/: docker-compose.yml
data-toolbox/jupyter-notebook-docker/: Dockerfile
data-toolbox/ml-flow-docker/: Dockerfile
data/Elastic/: docker-compose.yml
data/edgedb/: commands.md  docker-compose.yml
data/label-studio/: README.md
data/nocodb/: README.md
data/postgres/: backup-db.sh  exec_sql.sh  restore-db.sh
data/redis/: docker-compose.yml
db-etl/Elastic/: README.md  (+2 more)
db-etl/airflow/: README.md  pyproject.toml
db-etl/airflow/airflow-postgres/: docker-compose.yml
db-etl/airflow/airflow-postgres/scripts/: entrypoint.sh
db-etl/airflow/airflow-postgres/storage/postgres-store/base/13441/: 2618  2655  2673
db-etl/airflow/airflow-postgres/storage/postgres-store/base/13442/: 2651  2757  pg_internal.init
db-etl/airflow/airflow-postgres/storage/postgres-store/base/16384/: pg_internal.init
db-etl/airflow/airflow-postgres/storage/postgres-store/global/: 2671
db-etl/airflow/airflow-simple/dags/: postgres_migration.py
docker-network-graph/: README.md
heath-check/: Dockerfile  README.md
postgres/: drop_db.sql  exec_sql.sh
python/Cron/Normal/: Dockerfile  README.md  docker-compose.yml  launch-crontab.sh  launch-schedule.sh  pyproject.toml
python/Cron/Normal/cron/: cron_crontab.py  cron_schedule.py  run-crontab.py
python/Cron/Normal/cron/utils/: func.py
python/GnappoTest/: .gitignore  Dockerfile_gnappo  README.md  docker-compose-test.yml  docker-compose.yml  init-mongo.js  launch_gnappo.sh  pyproject.toml  test.py
python/GnappoTest/volume/mongodb_data/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-1989073609734134212.wt  collection-2-1989073609734134212.wt  collection-7-1989073609734134212.wt  index-1-1989073609734134212.wt  index-3-1989073609734134212.wt  index-8-1989073609734134212.wt  index-9-1989073609734134212.wt  sizeStorer.wt
python/GnappoTest/volume/mongodb_data/diagnostic.data/: metrics.2021-07-09T16-30-08Z-00000  metrics.2021-07-09T16-36-20Z-00000  metrics.2021-07-09T16-38-33Z-00000  metrics.interim
python/cookiecutter-example/: README.md  cookiecutter.json  pyproject.toml
python/cookiecutter-example/hooks/: post_gen_projects.py
python/cookiecutter-example/{{cookiecutter.project_slug}}/: launch.sh  lblocker.py  logger.py  pyproject.toml  test.md
python/cookiecutter-example/{{cookiecutter.project_slug}}/example/: config.py  logger.py  main.py
python/cookiecutter-example/{{cookiecutter.project_slug}}/example/mymodule/: name_selector.py
python/templates/poetry/: pyproject.toml
redis/: docker-compose.yml
(+208 files in other folders)
