[tool.poetry]
name = "airflow"
version = "0.1.0"
description = "Airflow project examples"
authors = ["Andrea Guzzo <andrea.guzzo92@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
