[tool.poetry]
name = "gnappotest"
version = "0.1.0"
description = ""
authors = ["jeydi92 <andrea.guzzo92@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.10"
pyaml = "^20.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
